--- a/CSharpOOP/HW3-Extension-Methods-Delegates-Lambda-LINQ/MainApp/MainApp.csproj
+++ b/CSharpOOP/HW3-Extension-Methods-Delegates-Lambda-LINQ/MainApp/MainApp.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -43,7 +44,11 @@
   <ItemGroup>
     <Compile Include="01StringbuilderExtension.cs" />
     <Compile Include="02IEnumerableExtensions.cs" />
+    <Compile Include="08CustomTimerEvent.cs" />
     <Compile Include="09-13Student.cs" />
+    <Compile Include="EvaluateExpression.cs" />
+    <Compile Include="20SumConvergentSeries.cs" />
+    <Compile Include="Group.cs" />
     <Compile Include="TestApp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="03-06LambdaLINQ.cs" />
