--- a/HighQualityCode/HW12-Refactoring/MatrixRotatingWalk.Tests/MatrixRotatingWalk.Tests.csproj
+++ b/HighQualityCode/HW12-Refactoring/MatrixRotatingWalk.Tests/MatrixRotatingWalk.Tests.csproj
@@ -76,13 +76,13 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\MatrixRotatingWalk.csproj">
-      <Project>{4d520899-7061-4eaa-b67e-d14ee8b30462}</Project>
-      <Name>MatrixWalk</Name>
-    </ProjectReference>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <ProjectReference Include="..\MatrixRotatingWalk.csproj">
+      <Project>{4d520899-7061-4eaa-b67e-d14ee8b30462}</Project>
+      <Name>MatrixRotatingWalk</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
