Added basic client app. Changed UserTransferModel to UserProfileTransferModel. Added UserTransferModel for the ASP.NET User. Added GetById in User Profile Controller. Modified HomeController. Modified Register in AccountController.

--- a/DateFirst.Api.DataTransferModels/DateFirst.Api.DataTransferModels.csproj
+++ b/DateFirst.Api.DataTransferModels/DateFirst.Api.DataTransferModels.csproj
@@ -49,6 +49,7 @@
     <Compile Include="PostTransferModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TownTransferModel.cs" />
+    <Compile Include="UserProfileTransferModel.cs" />
     <Compile Include="UserTransferModel.cs" />
   </ItemGroup>
   <ItemGroup>
