--- a/DateFirst.Web/DateFirst.Web.csproj
+++ b/DateFirst.Web/DateFirst.Web.csproj
@@ -87,6 +87,7 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CustomCss\style.css" />
     <Content Include="Content\CustomCss\user-profile-style.css" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\toastr.min.css" />
     <Content Include="Fonts\glyphicons-halflings-regular.svg" />
