--- a/DateFirst.Services/DateFirst.Services.csproj
+++ b/DateFirst.Services/DateFirst.Services.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IUserProfilesService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserProfilesService.cs" />
   </ItemGroup>
