Already the user can add and update a profile picture

--- a/DateFirst.Api/DateFirst.Api.csproj
+++ b/DateFirst.Api/DateFirst.Api.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Controllers\FlirtsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PostsController.cs" />
+    <Compile Include="Controllers\UploadProfilePictureController.cs" />
     <Compile Include="Controllers\UserProfilesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
