--- a/DateFirst.Api.IntegrationTests/DateFirst.Api.IntegrationTests.csproj
+++ b/DateFirst.Api.IntegrationTests/DateFirst.Api.IntegrationTests.csproj
@@ -151,6 +151,7 @@
     <Compile Include="AssemblyInitialization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FlirtsTests.cs" />
+    <Compile Include="PostsTests.cs" />
     <Compile Include="UsersTests.cs" />
   </ItemGroup>
   <ItemGroup>
