JS code cleanup, added helpers.

--- a/DateFirst.Web/DateFirst.Web.csproj
+++ b/DateFirst.Web/DateFirst.Web.csproj
@@ -108,13 +108,17 @@
     <Content Include="Scripts\bootstrap-image-gallery.min.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\Controllers\homeController.js" />
-    <Content Include="Scripts\Controllers\uploadFileController.js" />
     <Content Include="Scripts\Controllers\usersController.js" />
     <Content Include="Scripts\handlebars-v4.0.4.js" />
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
+    <Content Include="Scripts\Helpers\constants.js" />
+    <Content Include="Scripts\Helpers\enumerations.js" />
+    <Content Include="Scripts\Helpers\modelHelpers.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
     <Content Include="Scripts\jquery.blueimp-gallery.min.js" />
+    <Content Include="Scripts\Models\imageModel.js" />
+    <Content Include="Scripts\Models\flirtModel.js" />
     <Content Include="Scripts\Models\homeModel.js" />
     <Content Include="Scripts\Models\postModel.js" />
     <Content Include="Scripts\Models\userModel.js" />
