UI,removed dropdown,added logout img, TODO:fix edit-profile enabled for currentuser

--- a/DateFirst.Web/DateFirst.Web.csproj
+++ b/DateFirst.Web/DateFirst.Web.csproj
@@ -100,6 +100,7 @@
     <Content Include="Images\faviconNinja.png" />
     <Content Include="Images\login-btn.png" />
     <Content Include="Images\login-register-hover.png" />
+    <Content Include="Images\logout-btn.png" />
     <Content Include="Images\register-btn.png" />
     <Content Include="index.html" />
     <Content Include="Scripts\App\app.js" />
