More js refactoring

--- a/DateFirst.Web/DateFirst.Web.csproj
+++ b/DateFirst.Web/DateFirst.Web.csproj
@@ -114,6 +114,7 @@
     <Content Include="Content\toastr.scss" />
     <Content Include="Content\toastr.less" />
     <Content Include="Scripts\Helpers\constants.js" />
+    <Content Include="Scripts\Helpers\controllerHelper.js" />
     <Content Include="Scripts\Helpers\enumerations.js" />
     <Content Include="Scripts\Helpers\modelHelpers.js" />
     <Content Include="Scripts\jquery-2.1.4.min.js" />
