--- a/DateFirst.Api/Web.config
+++ b/DateFirst.Api/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DateFirstDbConnection" connectionString="Data Source=.;Initial Catalog=DateFirstDb;Integrated Security=True;" providerName="System.Data.SqlClient" />
+    <add name="DateFirstDbConnection" connectionString="Server=tcp:datefirstserver.database.windows.net,1433;Database=DateFirstDb;User ID=adrian@datefirstserver;Password=adri@n123;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
